# dynamics

./: CMakeLists.txt  conf.txt  data.txt
cpp/: CMakeLists.txt  Predictor.cpp  Predictor.h  PredictorExpression.cpp  PredictorExpression.h  dynamics.cpp
cpp/tests/: testStack.cpp  testVec1.cpp
